--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.20",
-    "@ai-sdk/react": "^1.2.9",
+    "@ai-sdk/openai": "2.0.0-alpha.12",
+    "@ai-sdk/react": "2.0.0-alpha.12",
     "@tailwindcss/typography": "^0.5.16",
-    "ai": "^4.3.10",
+    "ai": "5.0.0-alpha.12",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "marked": "^15.0.7",
@@ -23,7 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
-    "zod": "^3.24.2"
+    "zod": "^3.25.61"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
