--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@ai-sdk/openai": "2.0.0-alpha.12",
-    "@ai-sdk/react": "2.0.0-alpha.12",
+    "@ai-sdk/openai": "2.0.0-beta.9",
+    "@ai-sdk/react": "2.0.0-beta.21",
     "@tailwindcss/typography": "^0.5.16",
-    "ai": "5.0.0-alpha.12",
+    "ai": "5.0.0-beta.21",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "marked": "^15.0.7",
